sumo/tests/sumo/extended/wauts/errors/cross3ltl_error_missing_junctiondef/tls_state_switch.sumo
<?xml version="1.0"?>

<!-- generated on 05/15/08 18:07:37 by SUMO sumo Version 0.9.7
<configuration>

   <input>
      <net-file>net.net.xml</net-file>
      <route-files>input_routes.rou.xml</route-files>
      <additional-files>input_additional.add.xml</additional-files>
   </input>

   <time>
      <begin>0</begin>
      <end>400</end>
   </time>

   <processing>
      <no-duration-log>true</no-duration-log>
   </processing>

</configuration>
-->

<tls-switch-states>
    <tlsstate time="0" id="0" subid="S2" phase="0">RRRRGGGGRRRRGGGG</tlsstate>
</tls-switch-states>
